--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Играть в камень-ножницы-бумага</title>
-	<link rel="stylesheet" href="../Жуйкова_Бородавкина_Камень-ножницы-бумага/CSS/style.css">
+	<link rel="stylesheet" href="../CSS/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="icon" href="../Жуйкова_Бородавкина_Камень-ножницы-бумага/ICO/favicon-32x32.png" type="image/x-icon">
+<link rel="icon" href="../ICO/favicon-32x32.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@200;400&display=swap" rel="stylesheet">
 </head>
 <body>
