--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 
     <audio src="#" class="sound"></audio>
     
-    <script src="../Жуйкова_Бородавкина_Камень-ножницы-бумага/JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
